// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AddressDisplay /> > matches snapshot with an address 1`] = `
<div>
  <div
    class="flex flex-col"
  >
    <span
      class="text-md"
    >
      Address:
    </span>
    <span
      class="text-md font-bold"
    >
      123 Main St
    </span>
  </div>
</div>
`;

exports[`<AddressDisplay /> > matches snapshot without an address 1`] = `
<div>
  <div
    class="flex flex-col"
  >
    <span
      class="text-md"
    >
      Address:
    </span>
    <span
      class="text-md font-bold"
    >
      Address Not Found
    </span>
  </div>
</div>
`;
